# vista-os

./: LICENSE  README.md  pyproject.toml
docs/: action-plan.md  architecture.md  launcher.md  vision-mode.md
src/vista_action_engine/: __init__.py  cli.py  engine.py  models.py
tests/: test_action_engine.py
ui/launcher/: index.html  script.js  styles.css
