[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vista-action-engine"
version = "0.1.0"
description = "Rule-based prototype for Vista OS natural language to action plans"
authors = [{name = "Vista OS Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
